--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
 
           <ul class="donates">
             <li>Яндекс Деньги - 4100 1573 6854 649</li>
-            <li>Россельхозбанк  - 6390 0247 9025 8682 16</li>
-            <li>Qiwi - 2200 3803 1835 1210</li>
+            <li>Россельхозбанк  - 2200 3803 1835 1210</li>
+            <li>Qiwi - 4890 4945 5902 3403</li>
           </ul>
         </div>
       </div>
