--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="icon" href="favicon.ico">
-  <title>Рецепты мясных блюд - Cooker-ru.github.io блюда из разного мяса </title>
+  <title>Рецепты мясных блюд -  блюда из мяса Cooker-ru</title>
 
   <script src="js/wow.min.js" async></script>
   <script> new WOW().init(); </script>
