--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Способы приготовления, рецепты мясных блюд. Простые и сложные рецепты блюд из мяса.">
   <link href="https://fonts.googleapis.com/css?family=Lato|Oswald|Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
