--- a/about.html
+++ b/about.html
@@ -33,6 +33,15 @@
             <li>Яндекс Деньги - 4100 1573 6854 649</li>
             <li>Россельхозбанк  - 2200 3803 1835 1210</li>
             <li>Qiwi - 4890 4945 5902 3403</li>
+            <li>Qiwi - 4890 4945 5902 3403</li>
+          </ul>
+        </div>
+        <div class="helps">
+          <h5><span class="caption__span">Сотрудничество  </span></h5>
+
+          <ul class="donates">
+            <li>Почта - 03giznee@gmail.com</li>
+            <li>Телефон - +79208095225</li>
           </ul>
         </div>
       </div>
