--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta content='true' name='HandheldFriendly'/>
+  
+  <meta content='width' name='MobileOptimized'/>
+  <meta content='yes' name='apple-mobile-web-app-capable'/>
+
   <meta name="yandex-verification" content="21f70fd2a9babebd" />
   <meta name="yandex-verification" content="cac1c2950e7cbdd7" />
   <link href="https://cooker-ru.github.io/favicon.ico" rel="shortcut icon" />
