--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
           <div class="card card__pan">
             <div class="card-image">
-              <img src="img/pan/ava/stake_pan.png" alt="stake">
+              <img class="materialboxed" src="img/pan/ava/stake_pan.png" alt="stake">
             </div>
             <span class="card-title card__title__pan">Стейк из сивнины</span>
             <div class="card-content">
@@ -135,7 +135,7 @@
 
           <div class="card card__pan">
             <div class="card-image">
-              <img src="img/pan/ava/ava_ot.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/ava_ot.png">
             </div>
             <span class="card-title card__title__pan">Свиные отбивные</span>
             <div class="card-content">
@@ -178,7 +178,7 @@
 
           <div class="card card__pan">
             <div class="card-image">
-              <img src="img/pan/ava/ava_meat_potato.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/ava_meat_potato.png">
             </div>
             <span class="card-title card__title__pan">Жареное мясо с картошкой</span>
             <div class="card-content">
@@ -220,7 +220,7 @@
 
           <div class="card card__pan">
             <div class="card-image">
-              <img src="img/pan/ava/duck1.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/duck1.png">
             </div>
             <span class="card-title card__title__pan">Утиная грудка жареная</span>
             <div class="card-content">
@@ -262,7 +262,7 @@
 
           <div class="card card__pan">
             <div class="card-image">
-              <img src="img/pan/ava/meat_pan7.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/meat_pan7.png">
             </div>
             <span class="card-title card__title__pan">Жареное мясо с луком</span>
             <div class="card-content">
@@ -305,7 +305,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/pan_milk.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/pan_milk.png">
             </div>
             <span class="card-title card__title__pan">Свинина в кефире</span>
             <div class="card-content">
@@ -350,7 +350,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/chicken.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/chicken.png">
             </div>
             <span class="card-title card__title__pan">Куриная грудка</span>
             <div class="card-content">
@@ -392,7 +392,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/bs_beef.png">
+              <img class="materialboxed" alt=".png"  src="img/pan/ava/bs_beef.png">
             </div>
             <span class="card-title card__title__pan">Бефстроганов из говядины</span>
             <div class="card-content">
@@ -438,7 +438,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/br_with.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/br_with.png">
             </div>
             <span class="card-title card__title__pan">Баранина с грибами</span>
             <div class="card-content">
@@ -484,7 +484,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/steak_beef.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/steak_beef.png">
             </div>
             <span class="card-title card__title__pan">Стейк из говядины</span>
             <div class="card-content">
@@ -532,7 +532,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/kr_pan.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/kr_pan.png">
             </div>
             <span class="card-title card__title__pan">Кролик жареный</span>
             <div class="card-content">
@@ -580,7 +580,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/pork_potato.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/pork_potato.png">
             </div>
             <span class="card-title card__title__pan">Жаркое с картошкой</span>
             <div class="card-content">
@@ -627,7 +627,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/beef_pan_3.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/beef_pan_3.png">
             </div>
             <span class="card-title card__title__pan">Экспресс говядина</span>
             <div class="card-content">
@@ -673,7 +673,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/beef_china.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/beef_china.png">
             </div>
             <span class="card-title card__title__pan">Мясо по-китайски</span>
             <div class="card-content">
@@ -723,7 +723,7 @@
 
           <div class="card card__pan"> <!-- div card__pan -->
             <div class="card-image">
-              <img src="img/pan/ava/beef_t.png">
+              <img class="materialboxed" alt=".png" src="img/pan/ava/beef_t.png">
             </div>
             <span class="card-title card__title__pan">Тушеная говядина</span>
             <div class="card-content">
@@ -803,7 +803,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/oven.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/oven.png">
           </div>
           <div class="card-content">
             <span class="card-title">Мясо по-французски</span>
@@ -845,7 +845,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/ez.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/ez.png">
           </div>
           <div class="card-content">
             <span class="card-title">Ёжики из свинины</span>
@@ -888,7 +888,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/meat_potato.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/meat_potato.png">
           </div>
           <div class="card-content">
             <span class="card-title">Мясо с помидорами</span>
@@ -931,7 +931,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/kordon.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/kordon.png">
           </div>
           <div class="card-content">
             <span class="card-title">Куриные рулетики</span>
@@ -975,7 +975,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/gr.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/gr.png">
           </div>
           <div class="card-content">
             <span class="card-title">Грудка под шубой</span>
@@ -1023,7 +1023,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/9.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/9.png">
           </div>
           <div class="card-content">
             <span class="card-title">Буженина из свинины</span>
@@ -1063,7 +1063,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/potato.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/potato.png">
           </div>
           <div class="card-content">
             <span class="card-title">Говядина в фольге</span>
@@ -1106,7 +1106,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/pork_apple.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/pork_apple.png">
           </div>
           <div class="card-content">
             <span class="card-title">Свинина с яблоками</span>
@@ -1151,7 +1151,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/grech.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/grech.png">
           </div>
           <div class="card-content">
             <span class="card-title">Курица с гречкой</span>
@@ -1196,7 +1196,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/med.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/med.png">
           </div>
           <div class="card-content">
             <span class="card-title">Бедрышки под мёдом</span>
@@ -1240,7 +1240,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/cutlet.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/cutlet.png">
           </div>
           <div class="card-content">
             <span class="card-title">Котлеты в духовке</span>
@@ -1286,7 +1286,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/ananas.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/ananas.png">
           </div>
           <div class="card-content">
             <span class="card-title">Отбивные с ананасом</span>
@@ -1328,7 +1328,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/duck_apple.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/duck_apple.png">
           </div>
           <div class="card-content">
             <span class="card-title">Утка с яблоками</span>
@@ -1370,7 +1370,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/tefind.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/tefind.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тефтели из индейки</span>
@@ -1416,7 +1416,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/buzind.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/buzind.png">
           </div>
           <div class="card-content">
             <span class="card-title">Буженина из индейки</span>
@@ -1456,7 +1456,7 @@
 
         <div class="card__oven card">
           <div class="card-image">
-            <img src="img/oven/ava/g.png">
+            <img class="materialboxed" alt=".png" src="img/oven/ava/g.png">
           </div>
           <div class="card-content">
             <span class="card-title">Запеченный гусь</span>
@@ -1531,7 +1531,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/sauc_1.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/sauc_1.png">
           </div>
           <div class="card-content">
             <span class="card-title">Свинина по-гречески</span>
@@ -1580,7 +1580,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/tush.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/tush.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеное мясо</span>
@@ -1623,7 +1623,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/br.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/br.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеная баранина</span>
@@ -1664,7 +1664,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/borsh.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/borsh.png">
           </div>
           <div class="card-content">
             <span class="card-title">Зелёный борщ</span>
@@ -1715,7 +1715,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/frik.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/frik.png">
           </div>
           <div class="card-content">
             <span class="card-title">Суп с фрикадельками</span>
@@ -1761,7 +1761,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/smet.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/smet.png">
           </div>
           <div class="card-content">
             <span class="card-title">Курица в сметане</span>
@@ -1806,7 +1806,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/tush_potato.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/tush_potato.png">
           </div>
           <div class="card-content">
             <span class="card-title">Мясо с картошкой</span>
@@ -1852,7 +1852,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/golubci.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/golubci.png">
           </div>
           <div class="card-content">
             <span class="card-title">Голубцы</span>
@@ -1900,7 +1900,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/ind.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/ind.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеная индейка</span>
@@ -1942,7 +1942,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/krol.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/krol.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеный кролик</span>
@@ -1984,7 +1984,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/br_reb.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/br_reb.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеные бараньи ребрышки</span>
@@ -2029,7 +2029,7 @@
 
         <div class="card card__saucepan">
           <div class="card-image">
-            <img src="img/saucepan/ava/gus.png">
+            <img class="materialboxed" alt=".png" src="img/saucepan/ava/gus.png">
           </div>
           <div class="card-content">
             <span class="card-title">Тушеный гусь</span>
@@ -2100,7 +2100,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/dolma.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/dolma.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Долма азербайджанская</span>
@@ -2146,7 +2146,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/buglama.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/buglama.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Буглама из курицы</span>
@@ -2192,7 +2192,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/shashdar.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/shashdar.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Шашлыка по-карски</span>
@@ -2238,7 +2238,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/lula.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/lula.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Люля-кебаб</span>
@@ -2283,7 +2283,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/plov.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/plov.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Узбекский плов</span>
@@ -2330,7 +2330,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/domlama.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/domlama.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Домляма</span>
@@ -2377,7 +2377,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/hashlama.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/hashlama.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Хашлама</span>
@@ -2425,7 +2425,7 @@
 
         <div class="bbq__card card blue-grey darken-1">
           <div class="card-image">
-            <img src="img/bbq/ava/basma.png">
+            <img class="materialboxed" alt=".png" src="img/bbq/ava/basma.png">
           </div>
           <div class="card-content white-text">
             <span class="card-title">Басма</span>
