--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <title>Рецепты мясных блюд - Cooker-ru блюда из мяса </title>
 
   <script src="js/wow.min.js" async></script>
-  <script> new WOW().init(); </script>
+  <script defer> new WOW().init(); </script>
 </head>
 <body>
 
