--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div class="greeting">
           <h1 class="caption wow slideInLeft"><span class="caption__span wow fadeInLeft">Cooker:</span> Рецепты Мясных Блюд</h1>
-          <p class="description wow slideInRight">Здесь собраны рецепты мясных блюд. Вы найдете множество различных способов приготовления мяса, начиная от простых блюд на сковороде в домашних условиях и заканчивая традиционными блюдами кавказа на природе в кругу семьи и близких друзей.</p>
+          <p class="description wow slideInDown">Здесь собраны рецепты мясных блюд. Вы найдете множество различных способов приготовления мяса, начиная от простых блюд на сковороде в домашних условиях и заканчивая традиционными блюдами кавказа на природе в кругу семьи и близких друзей.</p>
         </div>
     </div>
     <div class="fill">сайт наполняется</div>
