--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="header-container container">
       <div class="header__navbar">
-        <div class="logo wow fadeIn" data-wow-duration="1.5s"><span class="logo__span">C</span>ooker
+        <div class="logo wow heartBeat" data-wow-duration="1.5s" data-wow-delay="1.25s"><span class="logo__span">C</span>ooker
           <a href="#"></a>
         </div>
 
@@ -60,8 +60,8 @@
       </div>
 
         <div class="greeting">
-          <h1 class="caption wow fadeIn"><span class="caption__span wow fadeInLeft">Cooker:</span> Рецепты Мясных Блюд</h1>
-          <p class="description wow fadeOut">Здесь собраны рецепты мясных блюд. Вы найдете множество различных способов приготовления мяса, начиная от простых блюд на сковороде в домашних условиях и заканчивая традиционными блюдами кавказа на природе в кругу семьи и близких друзей.</p>
+          <h1 class="caption wow rubberBand" data-wow-delay="2.5s"><span class="caption__span">Cooker:</span> Рецепты Мясных Блюд</h1>
+          <p class="description wow jello" data-wow-delay="3.25s">Здесь собраны рецепты мясных блюд. Вы найдете множество различных способов приготовления мяса, начиная от простых блюд на сковороде в домашних условиях и заканчивая традиционными блюдами кавказа на природе в кругу семьи и близких друзей.</p>
         </div>
     </div>
     <div class="fill">сайт наполняется</div>
