--- a/index.html
+++ b/index.html
@@ -2503,7 +2503,7 @@
         <a class="social__networks__links wow fadeIn" data-wow-delay="1.1s" href="#"></a>
       </ul>
     </div>
-    <span class="developer"><span class="c">c</span>2018 разработчик - <a href="https://github.com/rimlian" target="_blank" class="developer_link">Rimlian</a></span>
+    <span class="developer"><span class="c">c</span>2018 разработка сайта - <a href="https://github.com/rimlian" target="_blank" class="developer_link">Rimlian</a></span>
   </footer>
 
 
