--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <span class="developer">2018 разработчик проекта - <a href="https://github.com/rimlian" target="_blank" class="developer_link">Rimlian</a></span>
+    <span class="developer">2018 разработка сайта - <a href="https://github.com/rimlian" target="_blank" class="developer_link">Rimlian</a></span>
   </section>
 </body>
 </html>
