--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
       <div class="about__content">
         <h4>Контакты <i class="large material-icons">arrow_downward</i></h4>
-        <i class="contact_us">cooker-ru@gmail.com</i>
+        <i class="contact_us">cookerrussia@gmail.com</i>
         <p class="p_first">Если вы хотите поделиться рецептом, просто отправьте описание блюда с фото на почту. Мы проверим и обязательно опубликуем на сайте. </p>
 
         <div class="helps">
